# chip-8

./: CMakeLists.txt  main.c
src/: CMakeLists.txt  chip8.cpp  chip8.hpp  main.cpp
